creusot/tests/should_fail/prusti/adt/bound_zombie.stderr
error[creusot]: expected `Wrap<std::boxed::Box<u32>>` found `Wrap<creusot_contracts::__stubs::__prusti::Zombie<std::boxed::Box<u32>>>`
  --> bound_zombie.rs:13:5
   |
13 |     Wrap(at_expiry::<'x>(x))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

